# SystemT

./: .gitignore  .travis.yml  CHANGELOG.md  EpsilonX.cabal  README.md  bench.html  cabal.project  result.csv  result.html  result.xml
.github/workflows/: ci.yml  lint.yml
app/: Main.hs
app/Common/: Types.hs
app/Experiments/: Tests.hs
app/Lang/L1/: Syntax.hs
benchmarks/: Bench.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
experiments/: Tests.hs
src/: Main.hs
src/Common/: L3Types.hs  Types.hs
src/Experiments/: Programs.hs  Tests.hs
src/Lang/L1/: Eval.hs  Syntax.hs  Tests.hs
src/Lang/L2/: Eval.hs  Syntax.hs  Tests.hs  Typecheck.hs
src/Lang/L3/: Eval.hs  Syntax.hs  Typecheck.hs
src/Lang/L3/Eval/: EEval.hs  IEval.hs
src/Lang/L3/Syntax/: Extrinsic.hs  Intrinsic.hs
src/Lang/L4/: Eval.hs  Syntax.hs  Typecheck.hs
src/Lang/L4/Eval/: EEval.hs  IEval.hs
src/Lang/L4/Syntax/: Extrinsic.hs  Intrinsic.hs
src/Lang/L5/: Syntax.hs  Typecheck.hs
src/Lang/L5/Eval/: EEval.hs
src/Lang/L5/Syntax/: Extrinsic.hs
src/Lang/L6/: Examples.hs  Typecheck.hs
src/Lang/L6/Eval/: EEval.hs  IEval.hs
src/Lang/L6/Examples/: Acker.hs  Add.hs  Base.hs  Double.hs  Expo.hs  Fac.hs  Fib.hs  IsZero.hs  Mul.hs  Pred.hs  Tet.hs
src/Lang/L6/Syntax/: Extrinsic.hs  Intrinsic.hs
tests/: L1tests.hs  L2tests.hs  Test.hs
tests/Lang/L1/: Tests.hs
tests/Lang/L2/: Tests.hs
tests/Lang/L3/: Tests.hs
tests/Lang/L4/: Tests.hs
tests/Lang/L5/: Tests.hs
tests/Lang/L6/: Tests.hs
