cabal-version:      2.4
name:               EpsilonX
version:            0.1.0.0
maintainer:         wjrforcyber@163.com
author:             wjrforcyber
extra-source-files:
    CHANGELOG.md
    README.md

common common-deps
  default-language: Haskell2010
  build-depends:
    base >= 4.12 && <= 5,
    mtl >= 2.2,
    parsec >= 3.1.14.0,
    prettyprinter >= 1.7.1,
    QuickCheck >= 2.14.2
  ghc-options:
    -Wall
    -Wextra
  other-modules:
    Paths_EpsilonX

library
    import: common-deps
    exposed-modules:
        Common.Types
        Lang.L1.Syntax
        Lang.L1.Eval
        Lang.L2.Syntax
        Lang.L2.Typecheck
    other-modules:
        Experiments.Tests
    hs-source-dirs:   src

executable main
    import:         common-deps
    main-is:        Main.hs
    hs-source-dirs: src
    ghc-options:    -threaded -with-rtsopts=-N

test-suite test
    import:         common-deps
    type:           exitcode-stdio-1.0
    main-is:        Test.hs
    other-modules:
        Lang.L1.Tests
        Lang.L2.Tests
    hs-source-dirs: tests
    ghc-options:    -threaded -with-rtsopts=-N
    build-depends:
        EpsilonX,
        tasty >= 1.4.2,
        tasty-hunit >= 0.10.0.3,
        tasty-quickcheck >= 0.10.1.2
