cabal-version:      2.4
name:               EpsilonX
version:            0.1.0.0
maintainer:         wjrforcyber@163.com
author:             wjrforcyber
extra-source-files:
    CHANGELOG.md
    README.md

common common-deps
  default-language: Haskell2010
  build-depends:
    base >= 4.12 && <= 5,
    deepseq >= 1.4.4,
    mtl >= 2.2,
    parsec >= 3.1.14.0,
    prettyprinter >= 1.7.1,
    QuickCheck >= 2.14.2,
  ghc-options:
    -Wall
    -Wextra
    -Werror
  other-modules:
    Paths_EpsilonX

library
    import: common-deps
    exposed-modules:
        Common.Types

        Lang.L1.Syntax
        Lang.L1.Eval
        Lang.L2.Syntax
        Lang.L2.Typecheck
        Lang.L2.Eval
        Lang.L3.Syntax.Extrinsic
        Lang.L3.Syntax.Intrinsic
        Lang.L3.Eval.EEval
        Lang.L3.Eval.IEval
        Lang.L3.Typecheck
        Lang.L4.Syntax.Extrinsic
        Lang.L4.Syntax.Intrinsic
        Lang.L4.Eval.EEval
        Lang.L4.Eval.IEval
        Lang.L4.Typecheck

    other-modules:
    hs-source-dirs:   src

executable main
    import:         common-deps
    main-is:        Main.hs
    hs-source-dirs: src
    ghc-options:    -threaded -with-rtsopts=-N

test-suite test
    import:         common-deps
    type:           exitcode-stdio-1.0
    main-is:        Test.hs
    other-modules:
        Lang.L1.Tests
        Lang.L2.Tests
        Lang.L3.Tests
        Lang.L4.Tests
    hs-source-dirs: tests
    ghc-options:    -threaded -with-rtsopts=-N
    build-depends:
        EpsilonX,
        tasty >= 1.4.2,
        tasty-hunit >= 0.10.0.3,
        tasty-quickcheck >= 0.10.1.2

benchmark bench
    import:         common-deps
    type:           exitcode-stdio-1.0
    main-is:        Bench.hs
    hs-source-dirs: benchmarks
    ghc-options:    -threaded -with-rtsopts=-N
    build-depends:
        EpsilonX,
        criterion >= 1.5.11
